[package]
name = "xodb"
version = "0.1.0"
authors = ["Andreas Haufler <aha@scireum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
bytes = "0.5.6"
anyhow = "1.0.32"
futures = "0.3.0"